--- a/app/globals.css
+++ b/app/globals.css
@@ -105,7 +105,7 @@
 
   /* ==== File Upload */
   .file-upload {
-    @apply text-12-regular flex cursor-pointer  flex-col items-center justify-center gap-3 rounded-md border border-dashed border-dark-500 bg-dark-400 p-5;
+    @apply text-12-regular flex w-fit cursor-pointer  flex-col items-center justify-center gap-3 rounded-md border border-dashed border-dark-700 bg-white p-5 text-center;
   }
 
   .file-upload_label {
@@ -252,15 +252,18 @@
 
   /* =====  REACT PHONE NUMBER INPUT OVERRIDES */
   .input-phone {
-    @apply mt-2 py-[2px] flex flex-row h-12 space-x-1 rounded-md text-sm border bg-dark-400 placeholder:text-dark-600 border-dark-500 !important;
+    @apply mt-2 py-[2px] px-3 flex flex-col sm:flex-row space-x-1 rounded-md text-sm border bg-white placeholder:text-dark-600 border-dark-700 overflow-hidden !important;
   }
 
   [class="PhoneInputCountry"] {
-    @apply max-w-[200px] pl-3 cursor-pointer !important;
+    @apply w-full sm:max-w-[200px] cursor-pointer !important;
   }
 
   [class="PhoneInputCountrySelect"] {
-    @apply p-[2px] max-w-48 rounded cursor-pointer;
+    @apply p-[2px] w-full sm:max-w-48 rounded cursor-pointer bg-white !important;
+  }
+  [class="PhoneInputInput"] {
+    @apply w-full bg-white !important;
   }
   [class="PhoneInputCountryIconImg"] {
     @apply h-[20px] w-[20px] !important;
