--- a/app/globals.css
+++ b/app/globals.css
@@ -72,35 +72,13 @@
     @apply text-14-regular justify-items-end text-center text-dark-600 xl:text-left;
   }
 
-  /* ==== SUCCESS */
-  .success-img {
-    @apply m-auto flex flex-1 flex-col items-center justify-between gap-10 py-10;
-  }
-
-  .request-details {
-    @apply flex w-full flex-col items-center gap-8 border-y-2 border-dark-400 py-8 md:w-fit md:flex-row;
-  }
-
-  /* ===== ADMIN */
-  .admin-header {
-    @apply sticky top-3 z-20 mx-3 flex items-center justify-between rounded-2xl bg-dark-200 px-[5%] py-5 shadow-lg xl:px-12;
-  }
-
-  .admin-main {
-    @apply flex flex-col items-center space-y-6 px-[5%] pb-12 xl:space-y-12 xl:px-12;
-  }
-
-  .admin-stat {
-    @apply flex w-full flex-col justify-between gap-5 sm:flex-row xl:gap-10;
-  }
-
   /* ==== FORM */
   .radio-group {
     @apply flex h-full flex-1 items-center gap-2 rounded-md border border-dashed border-dark-500 bg-dark-400 p-3;
   }
 
   .checkbox-label {
-    @apply cursor-pointer text-sm font-medium text-dark-700 peer-disabled:cursor-not-allowed peer-disabled:opacity-70 md:leading-none;
+    @apply cursor-pointer text-sm font-medium text-blue-800 peer-disabled:cursor-not-allowed peer-disabled:opacity-70 md:leading-none;
   }
 
   /* ==== File Upload */
@@ -191,15 +169,15 @@
   }
 
   .shad-input-label {
-    @apply text-14-medium text-dark-400 font-semibold !important;
+    @apply text-14-medium text-blue-800 font-bold !important;
   }
 
   .shad-input {
-    @apply bg-white placeholder:text-dark-600 border-light-200 h-11 focus-visible:ring-0 focus-visible:ring-offset-0 !important;
+    @apply bg-white text-blue-800 placeholder:text-dark-600 border-light-200 h-11 focus-visible:ring-0 focus-visible:ring-offset-0 !important;
   }
 
   .shad-textArea {
-    @apply bg-white placeholder:text-dark-600 border-light-200 focus-visible:ring-0 focus-visible:ring-offset-0 !important;
+    @apply bg-white text-blue-800 placeholder:text-dark-600 border-light-200 focus-visible:ring-0 focus-visible:ring-offset-0 !important;
   }
 
   .shad-combobox-item {
@@ -211,11 +189,11 @@
   }
 
   .shad-select-trigger {
-    @apply bg-white  placeholder:text-dark-600 border-light-200 h-11 focus:ring-0 focus:ring-offset-0 !important;
+    @apply bg-white text-blue-800 placeholder:text-dark-600 border-light-200 h-11 focus:ring-0 focus:ring-offset-0 !important;
   }
 
   .shad-select-content {
-    @apply bg-white border-light-200 !important;
+    @apply bg-white border-light-200 text-blue-800 !important;
   }
 
   .shad-dialog {
