--- a/app/globals.css
+++ b/app/globals.css
@@ -80,6 +80,19 @@
   .checkbox-label {
     @apply cursor-pointer text-sm font-medium text-blue-800 peer-disabled:cursor-not-allowed peer-disabled:opacity-70 md:leading-none;
   }
+  .switch-label {
+    @apply cursor-pointer text-sm font-medium text-blue-800 peer-disabled:cursor-not-allowed peer-disabled:opacity-70 md:leading-none;
+  }
+
+  .custom-switch[data-state="checked"] .switch-thumb,
+  .custom-switch[data-state="checked"] span {
+    background-color: white !important;
+  }
+
+  .custom-switch[data-state="unchecked"] .switch-thumb,
+  .custom-switch[data-state="unchecked"] span {
+    background-color: #002060 !important; /* blue-600 */
+  }
 
   /* ==== File Upload */
   .file-upload {
